review of _section.scss, pt.3

--- a/src/pug/article__item.pug
+++ b/src/pug/article__item.pug
@@ -12,18 +12,17 @@ block wrapper
             a.pathway__link(href="#") Главная
             a.pathway__link(href="#") Статьи
             a.pathway__current(href="#") Как самостоятельно заменить тормозную жидкость
-          .content
-            .px-lg-5.px-md-4
-              .color-theme-brand
-                h1 Как самостоятельно заменить тормозную жидкость
-              .date.mb-2 30 ноября 2021
+          .content.px-lg-5.px-md-4
+            .color-theme-brand
+              h1 Как самостоятельно заменить тормозную жидкость
+            .date.mb-2 30 ноября 2021
           .section__picture.d-block.d-lg-none.mb-4
             +img('content/media/media-7.jpg','img-cover')
           .h4.px-lg-5.px-md-4 Любая часть в автомобиле имеет собственный ресурс и требует своевременной замены. Это же касается и тормозной жидкости. Ездить с расходниками, исчерпавшими свой ресурс, становится опасно — у автомобиля существенно увеличивается путь торможения, при резком снижении скорости колёса уходят в занос, а педаль тормоза начинает «проваливаться» и становится менее отзывчивой.
         .section__picture.col-lg-6.d-none.d-lg-block.px-0
           +img('content/media/media-7.jpg','img-cover')
 
-    .section.px-lg-0.px-3.mb-5
+    .section.px-lg-0.px-3.mb-4
       .content.px-lg-5.px-md-4
         .color-theme-brand.text-center
           h2 Почему нужно менять тормозную жидкость вовремя
