--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -209,6 +209,10 @@ html(lang="ru")
   _tabs
   _form - внутренние отступы и стили текста
 
+  _section:
+  include base/callorder.pug
+  include base/subscribe.pug
+
     + padding
     + px
     + py
