--- a/src/pug/results-wheels.pug
+++ b/src/pug/results-wheels.pug
@@ -25,11 +25,11 @@ block results__wrapper
     +card('','','Диск Сильверстоун','',false,false,false,false,false,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
 
 block results__seealso
-  .section.mb-3
-    .section__title Подходящие шины:
+  .mb-3
+    .h2.font-weight-bold.mb-4 Подходящие шины:
     include category/carousel.pug
 
 block results__recommended
-  .section.mb-3
-    .section__title Рекомендуем так же:
+  .mb-3
+    .h2.font-weight-bold.mb-4 Рекомендуем так же:
     include category/wheels.pug
