--- a/src/pug/category-tires.pug
+++ b/src/pug/category-tires.pug
@@ -30,14 +30,13 @@ block wrapper
 
     include category/popular.pug
 
-    .section.mb-3
-      .section__title Рекомендуем так же:
+    .mb-3
+      .h2.font-weight-bold.mb-4 Рекомендуем так же:
       include category/carousel.pug
 
     include base/links.pug
 
-    .section
-      .content.content_expanded
-        include base/content.pug
-        .content__footer
-          button.readmore.readmore_btn.readmore_arrow-down(type="button")
+    .content.content_expanded.mb-5
+      include base/content.pug
+      .content__footer
+        button.readmore.readmore_btn.readmore_arrow-down(type="button")
